--- a/profiles.html
+++ b/profiles.html
@@ -219,7 +219,7 @@
     <div id="toast-container" class="toast-container"></div>
     
     <div class="container">
-        <header class="header">
+        <header class="header" id="header-content">
             <div class="header-content">
                 <h1 class="logo">Modulari</h1>
             </div>
@@ -236,6 +236,11 @@
     </div>
 
     <!-- Load script as module -->
-    <script type="module" src="profiles.js"></script>
+    <script type="module" src="profiles.js">
+        import { renderHeader } from './header-component.js';
+
+        document.addEventListener('DOMContentLoaded', function() {
+            renderHeader('header-container');
+    </script>
 </body>
 </html>
