--- a/discovery.html
+++ b/discovery.html
@@ -197,7 +197,7 @@
         </div>
     </footer>
 
-    <script type="module">
+    <script type="module" src="discovery.js">
         import { renderHeader } from './header-component.js';
 
         document.addEventListener('DOMContentLoaded', function() {
