--- a/users.html
+++ b/users.html
@@ -558,7 +558,7 @@
     </div>
 
     <script type="module">
-        import permissionService from '../services/permission-service.js';
+        import permissionService from '../permission-service.js';
         import authService from '../services/auth-service.js';
 
         // Verificar se o usuário é administrador
