--- a/properties.html
+++ b/properties.html
@@ -738,7 +738,7 @@
     </div>
 
     <script type="module">
-        import permissionService from '../services/permission-service.js';
+        import permissionService from '../permission-service.js';
 
         // Verificar se o usuário é administrador
         document.addEventListener('DOMContentLoaded', function() {
