--- a/dashboard.html
+++ b/dashboard.html
@@ -423,7 +423,7 @@
     </div>
 
     <script type="module">
-        import permissionService from '../permission-service.js';
+        import permissionService from '../services/permission-service.js';
 
         // Verificar se o usuário é administrador
         document.addEventListener('DOMContentLoaded', function() {
