correçao de erros

--- a/profile.html
+++ b/profile.html
@@ -605,8 +605,8 @@
     </div>
 
     <script type="module">
-        import permissionService from './services/permission-service.js';
-        import authService from './services/auth-service.js';
+        import permissionService from '/services/permission-service.js';
+        import authService from '/services/auth-service.js';
 
         import { renderHeader } from './header-component.js';
 
