--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modulari - Painel Administrativo</title>
-    <link rel="stylesheet" href="../base-styles.css">
+    <link rel="stylesheet" href="/base-styles.css">
     <style>
         body {
             background-color: var(--surface-alt);
