import com modulari - Properties

--- a/properties.html
+++ b/properties.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modulari - Administração de Imóveis</title>
-    <link rel="stylesheet" href="/base-styles.css">
+    <link rel="stylesheet" href="/modulari/base-styles.css">
     <style>
         body {
             background-color: var(--surface-alt);
@@ -738,7 +738,7 @@
     </div>
 
     <script type="module">
-        import permissionService from '/services/permission-service.js';
+        import permissionService from '/modulari/services/permission-service.js';
 
         // Verificar se o usuário é administrador
         document.addEventListener('DOMContentLoaded', function() {
