--- a/index.html
+++ b/index.html
@@ -545,14 +545,14 @@
             <h3 class="section-title">Como você prefere encontrar seu imóvel ideal?</h3>
             
             <div class="choice-cards">
-                <div class="choice-card" id="discovery-option" onclick="selectInteractionMode('discovery')">
+                <div class="choice-card" id="discovery-option">
                     <div class="choice-icon">📋</div>
                     <h4>Questionário Guiado</h4>
                     <p>Responda a perguntas específicas para encontrar seu imóvel ideal rapidamente.</p>
                     <button class="button button-primary">Começar Questionário</button>
                 </div>
                 
-                <div class="choice-card highlighted" id="conversation-option" onclick="selectInteractionMode('conversation')">
+                <div class="choice-card highlighted" id="conversation-option">
                     <div class="choice-icon">💬</div>
                     <h4>Converse com Nosso Assistente</h4>
                     <p>Deixe nosso assistente inteligente entender suas necessidades através de uma conversa natural.</p>
