--- a/login-prompt.html
+++ b/login-prompt.html
@@ -96,7 +96,7 @@
 
     <script type="module">
         import dataService from './data-service.js';
-        import permissionService from './permission-service.js';
+        import permissionService from './services/permission-service.js';
         
         // Check if user is already logged in
         document.addEventListener('DOMContentLoaded', function() {
