--- a/property-details.html
+++ b/property-details.html
@@ -392,7 +392,7 @@
 
     <script type="module">
         import dataService from './data-service.js';
-        import permissionService from './permission-service.js';
+        import permissionService from './services/permission-service.js';
 
         import { renderHeader } from './header-component.js';
 
